# python-lib-test

./: README.md  pyproject.toml
mylib/: __init__.py  module.py
