[tool.poetry]
name = "mylib"
version = "0.1.0"
description = ""
authors = ["skmochi <yuki.sakamoto@ntt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
ocroy = {version = "^0.1.1", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
ocr = ["ocroy"]
